# ClearBombByCpp

./: .gitignore  README.md  run_dev.sh  run_tests.sh
backend/: CMakeLists.txt
backend/include/: ApiServer.hpp  AutoMarker.hpp  GameEngine.hpp  Logger.hpp  MinesweeperBoard.hpp
backend/scripts/: run_dev_server.sh
backend/src/: ApiServer.cpp  AutoMarker.cpp  GameEngine.cpp  Logger.cpp  MinesweeperBoard.cpp  main.cpp
backend/tests/: GameEngineTests.cpp
frontend/: .eslintrc.cjs  package.json  vite.config.js
frontend/public/: index.html
frontend/src/: App.jsx  main.jsx
frontend/src/components/: Board.jsx  Cell.jsx  GameShell.jsx  SelectionOverlay.jsx  Toolbar.jsx
frontend/src/context/: GameContext.jsx
frontend/src/hooks/: useMinesweeper.js
frontend/src/services/: apiClient.js
frontend/src/styles/: app.css  board.css
